# long-kwin-plugins

./: CMakeLists.txt  README.md
config/: kwinrc  kwinrulesrc
debian/: changelog  control  copyright
plugins/: CMakeLists.txt
plugins/decoration/: CMakeLists.txt  button.cpp  button.h  decoration.cpp  decoration.h  lingmoos.json
plugins/roundedwindow/: roundedwindow.cpp
scripts/long_popups/: metadata.desktop  metadata.json
scripts/long_popups/contents/code/: main.js
scripts/long_scale/: metadata.desktop  metadata.json
scripts/long_scale/contents/code/: main.js
scripts/long_squash/: metadata.desktop  metadata.json
scripts/longlauncher/: metadata.desktop
scripts/longlauncher/contents/: main.js
tabbox/ling_thumbnail/: metadata.desktop
tabbox/ling_thumbnail/contents/ui/: main.qml
